# LogTT

./: .clang-format  .clang-tidy  .gitignore  LogTT.py  Makefile  README.md  pyproject.toml  setup.py
config/: config.json  format_type.yaml  user_format_type.yaml
include/: duckdb.hpp
log_2k/: logmatch.py
modules/: app_config.py  constants.py  db.py  duckdb_service.pxd  duckdb_service.py  duckdb_service.pyx  format_config.py  log_analysis.pxd  log_analysis.pyx  log_extract_repository.py  log_extract_service.py  log_source_record.py  log_source_repository.py  log_source_service.py  log_structured_record.py
modules/core/: duckdb.pxd  parser.pxd
modules/log/: __init__.py  log_record.py  log_repository.py  log_service.py
modules/logparser/: .gitignore  __init__.py  ael_log_parser.py  ael_log_parser.pyx  base_log_parser.pxd  base_log_parser.py  base_log_parser.pyx  brain_log_parser.py  builtin_log_parser_configs.py  builtin_masking.py  drain_base_log_parser.py  drain_log_parser.cxx  drain_log_parser.hxx  drain_log_parser.pxd  drain_log_parser.py  drain_log_parser.pyx  jaccard_drain_log_parser.py  parse_result.py  (+18 more)
src/: ael_log_parser.cxx  ael_log_parser.hxx  base_log_parser.cxx  base_log_parser.hxx  brain_log_parser.cxx  brain_log_parser.hxx  drain_log_parser.cxx  drain_log_parser.hxx  duckdb_service.cxx  duckdb_service.hxx  jaccard_drain_log_parser.cxx  jaccard_drain_log_parser.hxx  log_analysis.cxx  log_analysis.hxx  precomp.hxx  spell_log_parser.cxx  spell_log_parser.hxx  utils.cxx  utils.hxx
ui/: APPConfig.py  APPMainWindow.py  LogManagePage.py  __init__.py
(+87 files in other folders)
