[project]
name = "LogTT"
version = "0.1.0"
description = "结构化日志分析与可视化系统"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cython>=3.2.4",
    "formatparse>=0.6.1",
    "humanize>=4.15.0",
    "loguru>=0.7.3",
    "pyside6-fluent-widgets[full]>=1.11.1",
    "setuptools>=82.0.1",
]
