[project]
name = "LogTT"
version = "0.1.0"
description = "结构化日志分析与可视化系统"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cython>=3.2.4",
    "humanize>=4.15.0",
    "parse>=1.21.1",
    "pyqtgraph>=0.14.0",
    "pyside6-fluent-widgets[full]>=1.11.1",
    "setuptools>=82.0.1",
]
